# clawseed

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README_zh.md  SECURITY.md  mkdocs.yml  requirements-docs.txt
.cargo/: config.toml
.clawseed/skills/skill-creator/: SKILL.md  manifest.toml
.github/workflows/: android-apk.yml  ci.yml  docs.yml
clients/android/: .gitignore  README.md  README_zh.md  build.gradle.kts  gradle.properties  settings.gradle.kts
clients/android/app/: build.gradle.kts
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/assets/models/gte-multilingual-base/: model_int8.onnx  ort_config.json  tokenizer_config.json
clients/android/app/src/main/kotlin/dev/clawseed/demo/: ClawseedApp.kt  ClawseedService.kt  CoordinateConverter.kt  MainActivity.kt
clients/android/app/src/main/kotlin/dev/clawseed/demo/data/: ChatModels.kt  GatewayApi.kt  (+1 more)
clients/android/app/src/main/res/drawable/: ic_launcher_background.xml
clients/android/app/src/main/res/values/: strings.xml
clients/android/app/src/main/res/values-zh-rCN/: strings.xml
clients/android/app/src/main/res/xml/: file_paths.xml
clients/android/docs/: sdk-design.md  sdk-implementation.md  sdk-usage.md  voice-input-design.md
clients/android/lib/: build.gradle.kts
clients/android/lib/src/main/kotlin/dev/clawseed/client/: ClawseedClient.kt  ClawseedMessages.kt
clients/android/sdk/android/: build.gradle.kts
clients/android/sdk/core/: build.gradle.kts
clients/android/sdk/embedded/: build.gradle.kts
crates/clawseed/: Cargo.toml
crates/clawseed-agent/: Cargo.toml
crates/clawseed-agent/src/: agent.rs  agent_loop.rs  approval.rs  context.rs  cost.rs  council.rs  dispatcher.rs  doctor.rs  health.rs  history.rs  hooks.rs  i18n.rs  identity.rs  integrations.rs  lib.rs  loop_.rs  observability.rs  observer.rs  persona.rs  personality.rs  platform.rs  prompt.rs  tool_execution.rs  tool_loop.rs  tool_registry.rs  tools.rs  tunnel.rs  user_model.rs
crates/clawseed-agent/src/cron/: mod.rs  scheduler.rs  store.rs
crates/clawseed-agent/src/security/: mod.rs  pairing.rs  secrets.rs
crates/clawseed-agent/src/skills/: builtin.rs  loader.rs  manifest.rs  mod.rs
crates/clawseed-agent/tests/: agent_integration.rs  agent_robustness.rs  agent_system.rs
crates/clawseed-agent/tests/common/: helpers.rs  mock_provider.rs  mock_tools.rs  mod.rs
crates/clawseed-api/: Cargo.toml
crates/clawseed-api/src/: channel.rs  context_provider.rs  hook.rs  lib.rs  memory_traits.rs  observer.rs  provider.rs  schema.rs  tool.rs  tool_context.rs  tool_registry.rs  user_profile.rs
crates/clawseed-config/: Cargo.toml
crates/clawseed-config/src/: lib.rs  secrets.rs
crates/clawseed-config/src/schema/: agent.rs  gateway.rs  mod.rs  providers.rs  storage.rs
crates/clawseed-gateway/: Cargo.toml
crates/clawseed-gateway/src/: api.rs  api_pairing.rs  api_webauthn.rs  canvas.rs  handlers.rs  lib.rs  node_tool.rs  nodes.rs  ratelimit.rs  remote_tool.rs  session_backend.rs  session_sqlite.rs  sse.rs  static_files.rs  tls.rs  voice_duplex.rs  ws.rs
crates/clawseed-gateway/tests/: remote_tool_bridge.rs  ws_android_integration.rs
crates/clawseed-macros/: Cargo.toml
crates/clawseed-macros/src/: lib.rs
crates/clawseed-memory/: Cargo.toml
crates/clawseed-memory/src/: conflict.rs  consolidation.rs  curator.rs  decay.rs  embeddings.rs  hygiene.rs  lib.rs  model_cache.rs  namespaced.rs  none.rs  retrieval.rs  snapshot.rs  sqlite.rs  traits.rs  user_profile.rs  vector.rs
crates/clawseed-memory/tests/: factory.rs  local_embedding.rs  memory_restart.rs  namespaced_sqlite.rs
crates/clawseed-parser/: Cargo.toml
crates/clawseed-parser/src/: lib.rs  parser.rs
crates/clawseed-providers/: Cargo.toml
crates/clawseed-providers/src/: aliases.rs  anthropic.rs  bedrock.rs  factory.rs  gemini.rs  lib.rs  models_dev.rs  multimodal.rs  options.rs  registry.rs  reliable.rs  traits.rs
crates/clawseed-providers/src/auth/: gemini_oauth.rs  mod.rs  openai_oauth.rs  profiles.rs
crates/clawseed-providers/src/compatible/: auth.rs  mod.rs  parsing.rs  provider_impl.rs
crates/clawseed-tools/: Cargo.toml
crates/clawseed-tools/src/: backup_tool.rs  calculator.rs  canvas.rs  content_search.rs  cron_add.rs  cron_list.rs  cron_remove.rs  cron_run.rs  cron_runs.rs  cron_update.rs  file_edit.rs  file_read.rs  file_write.rs  git_operations.rs  glob_search.rs  http_request.rs  knowledge_tool.rs  lib.rs  llm_task.rs  memory_export.rs  memory_forget.rs  memory_purge.rs  memory_recall.rs  memory_store.rs  model_routing_config.rs  pdf_read.rs  registry.rs  reviewer_memory_store.rs  reviewer_registry.rs  shell.rs  skill_create.rs  skill_tool.rs  util_helpers.rs  web_fetch.rs  web_search_provider_routing.rs  web_search_tool.rs
crates/clawseed-tools/tests/: tool_integration.rs
crates/clawseed/src/: main.rs
docs/: adf.md  clawseed-adf-improvement.md  clawseed-deferred-features.md  clawseed-development-plan.md  council-mode-plan.md  gateway-shared-components-refactor.md  memory-upgrade-plan.md  skill-system-redesign.md  target.md
docs/en/: android-demo.md  architecture.md  build-and-test.md  cetp-provider-tutorial.md  external-tool-protocol.md  index.md  prompt-cache-optimization.md  remote-tool-call.md  skills.md
docs/en/modules/: agent.md  api.md  config.md  gateway.md  index.md  memory.md  providers.md  tools.md
docs/en/tutorials/: extending-skills.md  hooks.md  index.md  personality-and-identity.md  skill-authoring.md  testing.md
docs/stylesheets/: extra.css
docs/zh/: android-demo.md  architecture.md  build-and-test.md  cetp-provider-tutorial.md  external-tool-protocol.md  index.md  prompt-cache-optimization.md  remote-tool-call.md  skills.md
docs/zh/modules/: agent.md  api.md  config.md  gateway.md  index.md  memory.md  providers.md  tools.md
docs/zh/tutorials/: extending-skills.md  hooks.md  index.md  personality-and-identity.md  skill-authoring.md  testing.md
tools/: build-clawseed-android.sh  ci-local.sh  coverage.sh  profile.sh  sync-skills-android.sh
(+88 files in other folders)
