[package]
name = "clawseed-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core traits and shared types for ClawSeed"

[dependencies]
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = { version = "1.0", features = ["std"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1.50", default-features = false, features = ["sync", "rt"] }
futures-util = { version = "0.3", features = ["sink", "alloc"] }
tracing = { version = "0.1", default-features = false }
parking_lot = "0.12"
