[package]
name = "clawseed-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Configuration loading and management for ClawSeed"

[dependencies]
clawseed-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
shellexpand = { workspace = true }
chacha20poly1305 = "0.10"
hex = "0.4"
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = { workspace = true }
