[package]
name = "clawseed-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LLM tool call parser for ClawSeed"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
anyhow = "1.0"
regex = "1.10"
tracing = { version = "0.1", default-features = false }
