[package]
name = "clawseed-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Built-in tool implementations for ClawSeed"

[dependencies]
clawseed-api = { workspace = true }
clawseed-config = { workspace = true }
clawseed-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }
nanohtml2text = { workspace = true }
hex = { workspace = true }
glob = { workspace = true }
sha2 = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }

pdf-extract = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }

[features]
rag-pdf = ["pdf-extract"]
android = []
